--- a/src/components/ui/Modal/Modal.module.css
+++ b/src/components/ui/Modal/Modal.module.css
@@ -6,11 +6,13 @@
   align-items: center;
   width: 100vw;
   height: 100vh;
+  padding: 12px;
   background: rgba(0, 0, 0, 0.5);
   z-index: 1;
 }
 .inner {
   margin: auto;
   max-width: 460px;
+  width: 100%;
   height: 312px;
 }
