--- a/src/components/ui/StepperForm/StepperForm.module.css
+++ b/src/components/ui/StepperForm/StepperForm.module.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
   margin-bottom: 52px;
+  overflow: hidden;
 }
 
 .stepper {
